@@ -1,1 +1,2 @@
  * adding the reason of the timeout to the error message
+ * bash completion
