@@ -1,3 +1,7 @@
+2022-02-03  Matteo Corti  <matteo@corti.li>
+
+        * check_ssl_cert.completion (_check_ssl_cert): first version of completion
+
 2022-02-01  Matteo Corti  <matteo@corti.li>
 
         * check_ssl_cert (exec_with_timeout): adding the reason of the timeout to the error message
